RESOLVED FIXED176394
Cache Storage Engine should not mix different origin caches
https://bugs.webkit.org/show_bug.cgi?id=176394
Summary Cache Storage Engine should not mix different origin caches
youenn fablet
Reported 2017-09-05 12:40:00 PDT
Cache Storage Engine should not mix different origin caches.
Attachments
Patch (7.62 KB, patch)
2017-09-05 12:42 PDT, youenn fablet
no flags
Patch (7.46 KB, patch)
2017-09-05 12:45 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2017-09-05 12:42:02 PDT
youenn fablet
Comment 2 2017-09-05 12:45:07 PDT
WebKit Commit Bot
Comment 3 2017-09-05 14:00:26 PDT
Comment on attachment 319926 [details] Patch Clearing flags on attachment: 319926 Committed r221633: <http://trac.webkit.org/changeset/221633>
WebKit Commit Bot
Comment 4 2017-09-05 14:00:28 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2017-09-27 12:37:54 PDT
Note You need to log in before you can comment on or make changes to this bug.