Cache Storage Engine should not mix different origin caches https://bugs.webkit.org/show_bug.cgi?id=176394

Patch by Youenn Fablet <youenn@apple.com> on 2017-09-05
Reviewed by Alex Christensen.

Source/WebKit:

* NetworkProcess/cache/CacheStorageEngine.cpp:
(WebKit::CacheStorage::Engine::readCachesFromDisk): Initializing the salt before creating the Caches object
so that its persistency path is correctly computed.
* NetworkProcess/cache/CacheStorageEngineCaches.cpp:
(WebKit::CacheStorage::cachesRootPath): Setting origin as partition string.

LayoutTests:

* http/tests/cache-storage/cache-origins.https-expected.txt: Added.
* http/tests/cache-storage/cache-origins.https.html: Added.
* http/tests/cache-storage/resources/cache-persistency-iframe.html:

Canonical link: https://commits.webkit.org/193003@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221633 268f45cc-cd09-0410-ab3c-d52691b4dbfc